# gxc-BloodPengu.py

./: .dockerignore  .ignoreyaml  Dockerfile  Install.md  README.md  pyproject.toml  setup.py
.data/: DATA.md  bloodpengu_out.json  pengu_out.json
.github/gxc/: .ignoreyaml
.github/workflows/: docker.yml  publish.yml
src/: bloodpengu_python.py
src/modules/: README.md  avrisk.py  brace.py  mi6.py  sacspengu.py
